modifico contenedores camisetas

--- a/pages/ind-futbol.html
+++ b/pages/ind-futbol.html
@@ -82,42 +82,42 @@
 
         <section class="galeria">
             <h2>Galeria de Diseños</h2>
-            <div class="container_gal" data-aos="fade-right" data-aos-anchor-placement="top-bottom">
-                <div>
+            <div class="container__galeria" data-aos="fade-right" data-aos-anchor-placement="top-bottom">
+                <div class="camiseta">
                     <img src="../img/fotos-futbol/camiseta1.jpg" alt="camiseta 1">
-                    <div class="desc">Camiseta Sublimada 1</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 1</div>
                 </div>
-                <div>
+                <div class="camiseta">
                     <img src="../img/fotos-futbol/camiseta2.jpg" alt="camiseta 2">
-                    <div class="desc">Camiseta Sublimada 2</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 2</div>
                 </div>
-                <div>
+                <div class="camiseta">
                     <img src="../img/fotos-futbol/camiseta3.jpg" alt="camiseta 3">
-                    <div class="desc">Camiseta Sublimada 3</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 3</div>
                 </div>
-                <div>
+                <div class="camiseta">
                     <img src="../img/fotos-futbol/camiseta4.jpg" alt="camiseta 4">
-                    <div class="desc">Camiseta Sublimada 4</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 4</div>
                 </div>
-                <div>
+                <div class="camiseta">
                     <img src="../img/fotos-futbol/camiseta5.jpg" alt="camiseta 5">
-                    <div class="desc">Camiseta Sublimada 5</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 5</div>
                 </div>
-                <div>
+                <div class="camiseta">
                     <img src="../img/fotos-futbol/camiseta6.jpg" alt="camiseta 6">
-                    <div class="desc">Camiseta Sublimada 6</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 6</div>
                 </div>
-                <div>
+                <div class="camiseta">
                     <img src="../img/fotos-futbol/camiseta7.jpg" alt="camiseta 7">
-                    <div class="desc">Camiseta Sublimada 7</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 7</div>
                 </div>
-                <div>
+                <div class="camiseta">
                     <img src="../img/fotos-futbol/camiseta8.jpg" alt="camiseta 8">
-                    <div class="desc">Camiseta Sublimada 8</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 8</div>
                 </div>
-                <div>
+                <div class="camiseta">
                     <img src="../img/fotos-futbol/camiseta9.jpg" alt="camiseta 9">
-                    <div class="desc">Camiseta Sublimada 9</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 9</div>
                 </div>
             </div>
         </section>
