--- a/pages/ind-polo.html
+++ b/pages/ind-polo.html
@@ -82,18 +82,18 @@
 
         <section class="galeria">
             <h2>Galeria de Diseños</h2>
-            <div class="container_gal" data-aos="fade-down" data-aos-anchor-placement="top-bottom">
-                <div>
+            <div class="container__galeria" data-aos="fade-down" data-aos-anchor-placement="top-bottom">
+                <div class="camiseta">
                     <img src="../img/fotos-polo/camiseta1.jpg" alt="camiseta 1">
-                    <div class="desc">Camiseta Sublimada 1</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 1</div>
                 </div>
-                <div>
+                <div class="camiseta">
                     <img src="../img/fotos-polo/camiseta2.jpg" alt="camiseta 2">
-                    <div class="desc">Camiseta Sublimada 2</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 2</div>
                 </div>
-                <div>
+                <div class="camiseta">
                     <img src="../img/fotos-polo/camiseta3.jpg" alt="camiseta 3">
-                    <div class="desc">Camiseta Sublimada 3</div>
+                    <div class="camiseta__desc">Camiseta Sublimada 3</div>
                 </div>
             </div>
         </section>
