--- a/pages/ind-hockey.html
+++ b/pages/ind-hockey.html
@@ -82,7 +82,7 @@
 
         <section class="galeria">
             <h2>Galeria de Diseños</h2>
-            <div class="container__galeria" data-aos="fade-left" data-aos-anchor-placement="top-bottom">
+            <div class="galeria__container" data-aos="fade-left" data-aos-anchor-placement="top-bottom">
                 <div class="camiseta">
                     <img src="../img/fotos-hockey/camiseta1.jpg" alt="camiseta 1">
                     <div class="camiseta__desc">Camiseta Sublimada 1</div>
