--- a/404.html
+++ b/404.html
@@ -78,15 +78,14 @@
         <section class="col-12 titulo" data-aos="fade-down">
             <h1>Oh No!!! No deberias estar aqui!!!</h1>
         </section>
-        <section class="col-12">
-        <div class="error">
-            <img src="./img/undraw_startled_-8-p0r.svg" alt="error 404">
-        </div>
+        <section class="col-12 error">
 
-        <div class="goback">
-            <h2> Por favor hace click <a href="./index.html">acá</a> para volver a la página de INICIO.</h2>
-        </div>
-    </section>
+            <img src="./img/undraw_startled_-8-p0r.svg" alt="error 404">
+
+            <div class="goback">
+                <h2> Por favor hace click <a href="./index.html">acá</a> para volver a la página de INICIO.</h2>
+            </div>
+        </section>
         <!-- botón volver arriba -->
 
         <button type="button" class="btn btn-floating btn-sm" id="btn-back-to-top">
