optimizo nesting scss

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
         </div>
 
-        <div class="descripcion row">
+        <div data-aos="flip-up" class="descripcion row">
             <div class="col intro">
                 <p>Elegí los colores y el diseño que más te gusten de nuestro catálogo, o proponenos el tuyo y lo
                     armamos a tu gusto.</p>
