--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -105,7 +105,7 @@
                         <h2>¿Dónde Estamos?</h2>
                         <div class="mapouter"><iframe
                                 src="https://maps.google.com/maps?q=bolivar%20637,%20coronel%20suarez,%20&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed"
-                                id="gmap_canvas" style="width: 400px; height: 300px;"></iframe>
+                                id="gmap_canvas"></iframe>
                         </div>
                     </div>
                 </section>
