--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -78,7 +78,7 @@
             <h1>¿Quiénes Somos?</h1>
         </section>
         <div class="quienes">
-            <div class="quienesTexto" data-aos="flip-left">
+            <div class="quienes__texto" data-aos="flip-left">
                 <p>MAHARANI Indumentaria es una fábrica familiar fundada en 1986, que trabaja para ofrecerle los
                     mejores
                     productos, de la mejor calidad textil y los mejores precios.</p>
