modif seccion t de talles

--- a/pages/tabla-talles.html
+++ b/pages/tabla-talles.html
@@ -28,7 +28,8 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png" alt="Logo"></a>
+                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png"
+                        alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -77,90 +78,111 @@
         <section class="titulo" data-aos="fade-down">
             <h1>Tabla de Talles</h1>
         </section>
-        <div>
-            <table>
-                <tr>
-                    <th>FEMENINO</th>
-                    <th>XS</th>
-                    <th>S</th>
-                    <th>M</th>
-                    <th>L</th>
-                    <th>XL</th>
-                    <th>XXL</th>
-                </tr>
-                <tr>
-                    <th>CONTORNO DE BUSTO</th>
-                    <td>84/88</td>
-                    <td>94</td>
-                    <td>96/100</td>
-                    <td>106</td>
-                    <td>108/113</td>
-                    <td>118</td>
-                </tr>
-                <tr>
-                    <th>CONTORNO DE CINTURA</th>
-                    <td>70/86</td>
-                    <td>89</td>
-                    <td>90/92</td>
-                    <td>100</td>
-                    <td>102/106</td>
-                    <td>116</td>
-                </tr>
-                <tr>
-                    <th>CONTORNO DE CADERA</th>
-                    <td>96/98</td>
-                    <td>104</td>
-                    <td>106/110</td>
-                    <td>115/120</td>
-                    <td>122/126</td>
-                    <td>132</td>
-                </tr>
-            </table>
+        <div class="talles" data-aos="fade-up">
+            <div class="talles__info">
+                <h2>Encontrá tu talle</h2>
+                <p> Si una de tus medidas está entre dos talles, pedí la menor para que la prenda te quede más ajustada,
+                    o la mayor si preferís que te quede más holgada.
+                    Si tus medidas de cadera y cintura se corresponden con dos talles distintos de la tabla, pedí el que
+                    se corresponda con la medida de la cadera.</p>
+            </div>
+            <div class="talles__fem">
+                <div class="talles___fem__camiseta">
+                    <img src="../img/talles/camiseta_f.svg" alt="talles femenino">
+                </div>
+                <table>
+                    <tr>
+                        <th>FEMENINO</th>
+                        <th>XS</th>
+                        <th>S</th>
+                        <th>M</th>
+                        <th>L</th>
+                        <th>XL</th>
+                        <th>XXL</th>
+                    </tr>
+                    <tr>
+                        <th>CONTORNO DE BUSTO</th>
+                        <td>84/88</td>
+                        <td>94</td>
+                        <td>96/100</td>
+                        <td>106</td>
+                        <td>108/113</td>
+                        <td>118</td>
+                    </tr>
+                    <tr>
+                        <th>CONTORNO DE CINTURA</th>
+                        <td>70/86</td>
+                        <td>89</td>
+                        <td>90/92</td>
+                        <td>100</td>
+                        <td>102/106</td>
+                        <td>116</td>
+                    </tr>
+                    <tr>
+                        <th>CONTORNO DE CADERA</th>
+                        <td>96/98</td>
+                        <td>104</td>
+                        <td>106/110</td>
+                        <td>115/120</td>
+                        <td>122/126</td>
+                        <td>132</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="talles__guia">
+                <h3>Contorno de pecho</h3>
+                <p>Medí alrededor de la parte más ancha, cruzando por encima de los puntos más elevados, con la cinta de
+                    medir en horizontal.</p>
+                <h3>Contorno de cintura</h3>
+                <p>Medí la parte más estrecha (por lo general la región lumbar y los puntos de flexión laterales),
+                    manteniendo la cinta horizontal.</p>
+                <h3>Contorno cadera</h3>
+                <p> Medí la circunferencia de la parte más amplia de tus caderas, manteniendo la cinta horizontal.</p>
+            </div>
+            <div class="talles__masc">
+                <table>
+                    <tr>
+                        <th>MASCULINO</th>
+                        <th>XS</th>
+                        <th>S</th>
+                        <th>M</th>
+                        <th>L</th>
+                        <th>XL</th>
+                        <th>XXL</th>
+                    </tr>
+                    <tr>
+                        <th>CONTORNO DE BUSTO</th>
+                        <td>102</td>
+                        <td>110</td>
+                        <td>116</td>
+                        <td>120</td>
+                        <td>126</td>
+                        <td>130</td>
+                    </tr>
+                    <tr>
+                        <th>CONTORNO DE CINTURA</th>
+                        <td>100</td>
+                        <td>104</td>
+                        <td>108</td>
+                        <td>116</td>
+                        <td>120</td>
+                        <td>126</td>
+                    </tr>
+                    <tr>
+                        <th>CONTORNO DE CADERA</th>
+                        <td>102</td>
+                        <td>106</td>
+                        <td>112</td>
+                        <td>118</td>
+                        <td>124</td>
+                        <td>130</td>
+                    </tr>
+                </table>
+                <div class="talles___masc__camiseta">
+                    <img src="../img/talles/camiseta_m.svg" alt="talles femenino">
+                </div>
+            </div>
         </div>
-        <div>
-            <hr>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    <th>MASCULINO</th>
-                    <th>XS</th>
-                    <th>S</th>
-                    <th>M</th>
-                    <th>L</th>
-                    <th>XL</th>
-                    <th>XXL</th>
-                </tr>
-                <tr>
-                    <th>CONTORNO DE BUSTO</th>
-                    <td>102</td>
-                    <td>110</td>
-                    <td>116</td>
-                    <td>120</td>
-                    <td>126</td>
-                    <td>130</td>
-                </tr>
-                <tr>
-                    <th>CONTORNO DE CINTURA</th>
-                    <td>100</td>
-                    <td>104</td>
-                    <td>108</td>
-                    <td>116</td>
-                    <td>120</td>
-                    <td>126</td>
-                </tr>
-                <tr>
-                    <th>CONTORNO DE CADERA</th>
-                    <td>102</td>
-                    <td>106</td>
-                    <td>112</td>
-                    <td>118</td>
-                    <td>124</td>
-                    <td>130</td>
-                </tr>
-            </table>
-        </div>
-
         <!-- botón volver arriba -->
 
         <button type="button" class="btn btn-warning btn-floating btn-sm" id="btn-back-to-top">
