puesta en func de formularios

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -114,18 +114,21 @@
                     <div class="formulario">
                         <h2>Envianos un mensaje</h2>
                         <h3>Completá tus datos</h3>
-                        <form action="enviar.php" method="get" enctype="text/plain">
+                        <form action="https://formsubmit.co/maharaniindumentaria@hotmail.com" method="POST">
+                            <input type="hidden" name="_subject" value="Consulta desde la Web">
+                        <input type="hidden" name="_next" value="https://maharaniindumentaria.com.ar/pages/thanks.html">
                             <label for="nombre" class="colocar_nombre">Nombre y Apellido<span class="obligatorio">*</span></label>
-                            <input type="text" name="introducir_nombre" id="nombre" required placeholder="Escribí tu nombre">
+                            <input type="text" name="name" id="nombre" required placeholder="Escribí tu nombre">
                             <label for="email" class="colocar_email">Email<span class="obligatorio">*</span></label>
-                            <input type="email" name="introducir_email" id="email" required placeholder="Escribí tu Correo Electrónico">
+                            <input type="email" name="email" id="email" required placeholder="Escribí tu Correo Electrónico">
                             <label for="telefono" class="colocar_telefono">Teléfono Celular</label>
-                            <input type="tel" name="introducir_telefono" id="telefono" placeholder="Código de área sin 0 y teléfono celular sin 15">
+                            <input type="tel" name="phone" id="telefono" placeholder="Código de área sin 0 y teléfono celular sin 15">
                             <label for="asunto" class="colocar_asunto">Asunto<span class="obligatorio">*</span></label>
-                            <input type="text" name="introducir_asunto" id="asunto" required placeholder="Motivo de tu consulta">
+                            <input type="text" name="_subject" id="asunto" required placeholder="Motivo de tu consulta">
                             <label for="mensaje" class="colocar_mensaje">Mensaje<span class="obligatorio">*</span></label>
-                            <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required placeholder="Deja tu comentario..."></textarea>
-                            <button type="submit" name="enviar_formulario" id="enviar" class="btn_send2">Enviar</button>
+                            <textarea name="message" class="texto_mensaje" id="mensaje" required placeholder="Deja tu comentario..."></textarea>
+                            <p class="advertencia">Luego de presionar enviar, por favor hace click en: <br> <b>"no soy un robot"</b></p>
+                            <button type="submit" id="enviar" class="btn_send2">Enviar</button>
                             <p class="aviso"><span class="obligatorio"> * </span>los campos son obligatorios.</p>
                         </form>
                     </div>
