--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -18,7 +18,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- mi hoja de estilos -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a data-aos="zoom-in" class="navbar-brand logo" href="./index.html"><img src="./img/logo.png"
+                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png"
                         alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -38,10 +38,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">INICIO</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/quienes.html">¿QUIÉNES SOMOS?</a>
+                            <a class="nav-link" href="./quienes.html">¿QUIÉNES SOMOS?</a>
                         </li>
 
                         <!-- menú desplegable "galerias" -->
@@ -50,23 +50,23 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">GALERÍA</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./pages/ind-futbol.html">Indumentaria de FÚTBOL</a>
+                                <li><a class="dropdown-item" href="./ind-futbol.html">Indumentaria de FÚTBOL</a>
                                 </li>
-                                <li><a class="dropdown-item" href="./pages/ind-hockey.html">Indumentaria de HOCKEY</a>
+                                <li><a class="dropdown-item" href="./ind-hockey.html">Indumentaria de HOCKEY</a>
                                 </li>
-                                <li><a class="dropdown-item" href="./pages/ind-polo.html">Indumentaria de POLO</a></li>
+                                <li><a class="dropdown-item" href="./ind-polo.html">Indumentaria de POLO</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./pages/tabla-talles.html">Tabla de Talles</a></li>
+                                <li><a class="dropdown-item" href="./tabla-talles.html">Tabla de Talles</a></li>
                             </ul>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/presupuesto.html">PRESUPUESTO</a>
+                            <a class="nav-link" href="./presupuesto.html">PRESUPUESTO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
+                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
                         </li>
                     </ul>
                 </div>
@@ -76,16 +76,16 @@
     <main>
 
         <section class="titulo" data-aos="fade-down">
-            <h1>Oh No!!! No deberias estar aqui!!!</h1>
+            <h1>¡Muchas gracias por comunicarte con nosotros!</h1>
         </section>
-        <section class="error">
-
-            <img src="./img/404.svg" alt="error 404">
+        <div class="gracias">
+            <h3>A la brevedad vamos a estar respondiendo tu consulta!</h3>
+            <img src="../img/gracias.svg" alt="gracias">
 
             <div class="goback">
-                <h4> Por favor hace click <a href="./index.html">acá</a> para volver a la página de INICIO.</h4>
+                <h4> Por favor hace click <a href="../index.html">acá</a> para volver a la página de INICIO.</h4>
             </div>
-        </section>
+        </div>
         <!-- botón volver arriba -->
 
         <button type="button" class="btn btn-floating btn-sm" id="btn-back-to-top">
